# theseed

./: .bazelignore  .bazelrc  .buckconfig  .clangd  .editorconfig  .envrc  .gitignore  .prettierignore  .prettierrc  .sops.yaml  BUILD.bazel  Cargo.toml  DIR.ndscm.ts  LICENSE  MODULE.bazel  Makefile  README.md  REPO.bazel  REPO.ndscm.ts  bootstrap.sh  dir.ndscm.ts  format.sh  gazelle_python.yaml  gazelle_python_modules_mapping_darwin.json  gazelle_python_modules_mapping_linux.json  go.mod  go.sum  key.age  ndscm.env  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json  recipients.txt  repo.ndscm.ts  requirements.txt  requirements_darwin.txt  sanitize.sh  test.sh  (+3 more)
devprod/python/: BUILD.bazel
seed/: BUILD.bazel  README.md
seed/cloud/authorization/: README.md
seed/cloud/bidirequest/: README.md
seed/cloud/bidirequest/proto/: BUILD.bazel  DIR.ndscm.ts  bidirequest.proto
seed/cloud/gcloud/tool/: grant-cloudsql-client-role.sh  transfer-cloudsql-database-owner.sql
seed/cloud/keycloak/: BUILD.bazel
seed/cloud/keycloak/container/: .gitignore  Containerfile  Dockerfile  build.sh  start.sh
seed/cloud/login/proto/: BUILD.bazel  DIR.ndscm.ts  build.sh  login.proto  package.json
seed/cloud/postgres/stack/: BUILD.bazel
seed/cloud/sfe/: BUILD.bazel  README.md
seed/cloud/sfe/certstore/: BUILD.bazel  certstore.go
seed/cloud/sfe/container/: .gitignore  Containerfile  build.sh  start.sh
seed/cloud/sfe/escalate/: BUILD.bazel  escalate_handler.go
seed/cloud/sfe/server/: BUILD.bazel  server.go
seed/cloud/sfe/signedjwt/: BUILD.bazel  generate-jwk.sh  wrap_openid_client.go  wrap_rsa_token_source.go
seed/cloud/sqlsession/: BUILD.bazel  sqlsession.go
seed/cloud/sqlsession/database/: BUILD.bazel  DIR.ndscm.ts  build.sh
seed/devprod/: setproxy.sh
seed/devprod/android/sdk/: BUILD.bazel  download.sh  extension.bzl
seed/devprod/bazel/: output_groups.bzl
seed/devprod/bazel/printenv/: BUILD.bazel  printenv.sh
seed/devprod/buildinfo/: BUILD.bazel  buildinfo.go  buildinfo_go.sh  generate-workspace-status.sh
seed/devprod/buildinfo/ts/: BUILD.bazel  DIR.ndscm.ts  build.sh  package.json  tsconfig.json
seed/devprod/container/: README.md
seed/devprod/container/debian/: Containerfile  build.sh
seed/devprod/container/ubuntu/: Containerfile  Dockerfile  build.sh
seed/devprod/devcert/: generate.sh  install.sh
seed/devprod/devcron/: commit.sh  install.sh  push.sh
seed/devprod/direnv/: ndscm.env
seed/devprod/dotslash/update/: BUILD.bazel  Cargo.toml
seed/devprod/format/gofmt/: BUILD.bazel  def.bzl
seed/devprod/format/groovy/: BUILD.bazel  groovy_format.go
seed/devprod/format/prettier/: BUILD.bazel  index.js  package.json
seed/devprod/go/: ent.bzl  proto.bzl
seed/devprod/go/common/: BUILD.bazel  download.go  download_test.go  error.go
seed/devprod/go/dummy/: BUILD.bazel  dummy.go
seed/devprod/golink/: BUILD.bazel  README.md  backup-golink.sh  compose.yaml
seed/devprod/golink/container/: .gitignore  Containerfile  Dockerfile  build.sh  start.sh
seed/devprod/golink/database/: BUILD.bazel  DIR.ndscm.ts  apply.sh  build.sh  export.sh  format.sh  schema.sql
seed/devprod/golink/proto/: BUILD.bazel  DIR.ndscm.ts  build.sh  golink.proto  golink_error.proto  package.json
seed/devprod/golink/server/: BUILD.bazel  DIR.ndscm.ts  golink_server.go  start.sh
seed/devprod/golink/service/: BUILD.bazel  golink_handler.go  golink_service.go  link_common.go
seed/devprod/golink/stack/: BUILD.bazel
seed/devprod/golink/webapp/: BUILD.bazel  DIR.ndscm.ts  dir.ndscm.ts  i18next.config.ts  package.json  react-router.config.ts  start.sh  tsconfig.json  vite.config.ts
seed/devprod/gotcha/tsx/: BUILD.bazel  DIR.ndscm.ts  package.json  tsconfig.json
seed/devprod/httpdump/: BUILD.bazel  main.go
seed/devprod/ndscm/: ACCESS.ndscm.ts  README.md  access.ndscm.ts  envsetup.sh  install.sh  nd-cut.sh  nd-sync.sh
seed/devprod/ndscm/cli/: BUILD.bazel  cut.go  dev.go  nd_amend.go  nd_apply.go  nd_bootstrap.go  nd_build.go  nd_change.go  nd_check.go  nd_commit.go  nd_connect.go  nd_continue.go  nd_cut.go  nd_dev.go  nd_format.go  nd_lock.go  nd_main.go  nd_makefile.go  nd_melt.go  nd_run.go  nd_secret.go  nd_setup.go  nd_shell.go  nd_split.go  nd_submit.go  nd_sync.go  nd_t.go  nd_testable.go  nd_tidy.go  nd_uncut.go  nd_vendor.go  ndscm.go  review.go  setup.go  shell.go  sync.go
seed/devprod/ndscm/clientcore/: BUILD.bazel  check_testable.go  client_core.go  nd_amend.go  nd_apply.go  nd_change.go  nd_commit.go  nd_connect.go  nd_continue.go  nd_cut.go  nd_dev.go  nd_format.go  nd_main.go  nd_makefile.go  nd_melt.go  nd_review.go  nd_run.go  nd_secret.go  nd_setup.go  nd_shell.go  nd_split.go  nd_submit.go  nd_sync.go  nd_uncut.go
seed/devprod/ndscm/common/: BUILD.bazel  config.go  system.go  verify.go
seed/devprod/ndscm/config/: ACCESS.ts  DIR.ts  REPO.ts  access.ts  dir.ts  repo.ts  workspace.ts
seed/devprod/ndscm/configloader/: BUILD.bazel  common.go  (+3 more)
seed/devprod/openfork/: BUILD.bazel  README.md  asyncx.py  clean.py  diffedit.py  diffpath.py  export.py  git.py  message.py  metadata.py  patch.py  prepare.py  rebuild.py  scalpel.py  walk.py  worktree.py
seed/devprod/platform/: BUILD.bazel
seed/devprod/smd/: README.md
seed/devprod/sop/: README.md  error-discovery.md  faas-oriented-development.md  function-ordering.md  type-organization.md
seed/devprod/ts/: README.md
seed/devprod/wpad/: Dockerfile  compose.yaml  proxy.pac  wpad.js
seed/devprod/wsl/: publish-port.sh
seed/infra/groovy/: BUILD.bazel  README.md  keyword.go  lexer.go  parser.go  symbol.go  token.go
seed/infra/python/: BUILD.bazel  seed_flag.py  seed_init.py  seed_log.py  seed_typing.py
seed/infra/tson/: README.md
seed/newtype/amadeus/: BUILD.bazel  README.md
seed/newtype/gajetto/: README.md
seed/newtype/hooin/: BUILD.bazel  README.md
seed/newtype/kurisu/: README.md
seed/newtype/paperme/: README.md
seed/newtype/steiner/: README.md
seed/newtype/steins/: README.md
seed/newtype/tutturu/: README.md
seed/office/stuff/: BUILD.bazel  README.md
(+916 files in other folders)
