load("@gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@pypi//:requirements.bzl", "all_whl_requirements")
load("@rules_python_gazelle_plugin//manifest:defs.bzl", "gazelle_python_manifest")
load("@rules_python_gazelle_plugin//modules_mapping:def.bzl", "modules_mapping")

# CC

refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = {
    },
)

# Node

npm_link_all_packages()

# Python

modules_mapping(
    name = "modules_map",
    wheels = all_whl_requirements,
)

gazelle_python_manifest(
    name = "gazelle_python_manifest",
    modules_mapping = "//seed/devprod/python/modules_mapping",
    pip_repository_name = "pypi",
    requirements = [
        "//:requirements_darwin.txt",
        "//:requirements.txt",
    ],
)

# Gazelle

gazelle_binary(
    name = "gazelle_extend",
    languages = [
        "@gazelle//language/go",  # built-in
        "@gazelle//language/proto",  # built-in
        # Other languages
        "@rules_python_gazelle_plugin//python",
    ],
)

# gazelle:exclude **/*_pb2_grpc.py
# gazelle:exclude **/*_pb2.py
# gazelle:exclude **/*_pb2.pyi
# gazelle:exclude **/*pb
# gazelle:exclude **/*pbconnect
# gazelle:exclude **/node_modules
# gazelle:exclude **/ent
# gazelle:python_default_visibility NONE
# gazelle:python_generation_mode file

gazelle(
    name = "gazelle",
    gazelle = ":gazelle_extend",
)

platform(
    name = "android-arm32",
    constraint_values = [
        "@platforms//os:android",
        "@platforms//cpu:armv7",
    ],
)

platform(
    name = "android-arm64",
    constraint_values = [
        "@platforms//os:android",
        "@platforms//cpu:aarch64",
    ],
)

platform(
    name = "android-x86",
    constraint_values = [
        "@platforms//os:android",
        "@platforms//cpu:x86_32",
    ],
)

platform(
    name = "android-x64",
    constraint_values = [
        "@platforms//os:android",
        "@platforms//cpu:x86_64",
    ],
)
