[workspace]
resolver = "3"
members = [
    "seed/devprod/dotslash/update",
    "seed/devprod/starter/rustcli",
]

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
ferris-says = "0.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
