"""
Theseed

The monorepo of Theseed
"""

module(
    name = "theseed",
    version = "1.0",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

bazel_dep(name = "platforms", version = "1.0.0")

# Android

## Android Command Line Tools
include("//seed/vendor/android/cmdline-tools:cmdline-tools.MODULE.bazel")

## Android SDK
include("//seed/vendor/android/sdk:sdk.MODULE.bazel")

# CC

bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "rules_cc", version = "0.2.16")

## CC Libraries

bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "boost.asio", version = "1.87.0.bcr.1")
bazel_dep(name = "boost.beast", version = "1.87.0.bcr.1")
bazel_dep(name = "boost.coroutine", version = "1.87.0")

single_version_override(
    module_name = "boost.asio",
    patches = ["//seed/infra/grpc/grpcbeast:boost_asio_android.patch"],
)

# Container

bazel_dep(name = "rules_oci", version = "2.2.6")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "debian_12_slim",
    image = "docker.io/library/debian",
    platforms = ["linux/amd64"],
    tag = "12-slim",
)
use_repo(oci, "debian_12_slim", "debian_12_slim_linux_amd64")

# Go

bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")

# Dependencies that required by both bazel and go mod
bazel_dep(name = "cel-spec", version = "0.25.1", repo_name = "dev_cel_expr")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.2")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

inject_repo(go_deps, "dev_cel_expr")

use_repo(
    go_deps,
    "com_connectrpc_connect",
    "com_connectrpc_grpchealth",
    "com_connectrpc_validate",
    "com_github_google_uuid",
    "com_github_jackc_pgx_v5",
    "com_github_lib_pq",
    "com_github_rogpeppe_go_internal",
    "com_github_rs_cors",
    "com_github_soheilhy_cmux",
    "io_entgo_ent",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_oauth2",
    "org_golang_x_sync",
)

# Grpc
bazel_dep(name = "grpc", version = "1.74.1")
bazel_dep(name = "grpc-java", version = "1.75.0")

# Java (required by grpc-java)
bazel_dep(name = "rules_jvm_external", version = "6.7")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.google.protobuf:protobuf-java-util:4.33.4",
    ],
)
use_repo(maven, "maven")

# JavaScript and TypeScript

bazel_dep(name = "rules_nodejs", version = "6.7.4")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(
    node_version = "24.14.1",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "aspect_rules_js", version = "3.1.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
use_repo(pnpm, "pnpm")

bazel_dep(name = "aspect_rules_ts", version = "3.8.9")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")

# Pkg

bazel_dep(name = "rules_pkg", version = "1.1.0")

# Proto

bazel_dep(name = "protobuf", version = "33.4")
bazel_dep(name = "rules_buf", version = "0.5.2")

# Python

include("//seed/vendor/python:python.MODULE.bazel")

# Apps

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

## Keycloak
include("//seed/vendor/keycloak:keycloak.MODULE.bazel")
