"""
Theseed

The monorepo of Theseed
"""

module(
    name = "theseed",
    version = "1.0",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

bazel_dep(name = "platforms", version = "1.0.0")

# Android

## Android Command Line Tools
include("//seed/vendor/android/cmdline-tools:cmdline-tools.MODULE.bazel")

## Android SDK
include("//seed/vendor/android/sdk:sdk.MODULE.bazel")

# CC

include("//seed/vendor/cc:cc.MODULE.bazel")

## Abseil
include("//seed/vendor/abseil:abseil.MODULE.bazel")

## CC Libraries

bazel_dep(name = "boost.asio", version = "1.87.0.bcr.1")
bazel_dep(name = "boost.beast", version = "1.87.0.bcr.1")
bazel_dep(name = "boost.coroutine", version = "1.87.0")

single_version_override(
    module_name = "boost.asio",
    patches = ["//seed/infra/grpc/grpcbeast:boost_asio_android.patch"],
)

# Container

bazel_dep(name = "rules_oci", version = "2.2.6")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "debian_12_slim",
    image = "docker.io/library/debian",
    platforms = ["linux/amd64"],
    tag = "12-slim",
)
use_repo(oci, "debian_12_slim", "debian_12_slim_linux_amd64")

# Go

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.50.0")

# Dependencies that required by both bazel and go mod
bazel_dep(name = "cel-spec", version = "0.25.1", repo_name = "dev_cel_expr")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.2")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

inject_repo(go_deps, "dev_cel_expr")

use_repo(
    go_deps,
    "com_connectrpc_connect",
    "com_connectrpc_grpchealth",
    "com_connectrpc_validate",
    "com_github_google_uuid",
    "com_github_jackc_pgx_v5",
    "com_github_lib_pq",
    "com_github_rogpeppe_go_internal",
    "com_github_rs_cors",
    "com_github_soheilhy_cmux",
    "io_entgo_ent",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_oauth2",
    "org_golang_x_sync",
)

# Grpc
bazel_dep(name = "grpc", version = "1.80.0")
bazel_dep(name = "grpc-java", version = "1.78.0")

# Java

include("//seed/vendor/java:java.MODULE.bazel")

# JavaScript and TypeScript

include("//seed/vendor/ts:ts.MODULE.bazel")

# Pkg

bazel_dep(name = "rules_pkg", version = "1.1.0")

# Proto

include("//seed/vendor/proto:proto.MODULE.bazel")

# Python

include("//seed/vendor/python:python.MODULE.bazel")

# Rust

include("//seed/vendor/rust:rust.MODULE.bazel")

# Shell

include("//seed/vendor/shell:shell.MODULE.bazel")

# Apps

## Bazel
include("//seed/vendor/bazel:bazel.MODULE.bazel")

## Hedronvision Bazel Compile Commands Extractor
include("//contrib/vendor/hedronvision/bazel-compile-commands-extractor:bazel-compile-commands-extractor.MODULE.bazel")

## Keycloak
include("//seed/vendor/keycloak:keycloak.MODULE.bazel")
