"""
Theseed

The monorepo of Theseed
"""

module(
    name = "theseed",
    version = "1.0",
)

bazel_dep(name = "platforms", version = "1.0.0")

# Android

## Android Command Line Tools
include("//seed/vendor/android/cmdline-tools:cmdline-tools.MODULE.bazel")

## Android SDK
include("//seed/vendor/android/sdk:sdk.MODULE.bazel")

# CC

include("//seed/vendor/cc:cc.MODULE.bazel")

## Abseil
include("//seed/vendor/abseil:abseil.MODULE.bazel")

## Boost

include("//seed/vendor/boost:boost.MODULE.bazel")

# Container

bazel_dep(name = "rules_oci", version = "2.2.6")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "debian_12_slim",
    image = "docker.io/library/debian",
    platforms = ["linux/amd64"],
    tag = "12-slim",
)
use_repo(oci, "debian_12_slim", "debian_12_slim_linux_amd64")

# Go

include("//seed/vendor/go:go.MODULE.bazel")

# Grpc
bazel_dep(name = "grpc", version = "1.80.0")
bazel_dep(name = "grpc-java", version = "1.78.0")

# Java

include("//seed/vendor/java:java.MODULE.bazel")

# JavaScript and TypeScript

include("//seed/vendor/ts:ts.MODULE.bazel")

# LLVM

include("//seed/vendor/llvm:llvm.MODULE.bazel")

# Pkg

bazel_dep(name = "rules_pkg", version = "1.1.0")

# Proto

include("//seed/vendor/proto:proto.MODULE.bazel")

# Python

include("//seed/vendor/python:python.MODULE.bazel")

# Rust

include("//seed/vendor/rust:rust.MODULE.bazel")

# Shell

include("//seed/vendor/shell:shell.MODULE.bazel")

# Apps

## Bazel
include("//seed/vendor/bazel:bazel.MODULE.bazel")

## Hedronvision Bazel Compile Commands Extractor
include("//contrib/vendor/hedronvision/bazel-compile-commands-extractor:bazel-compile-commands-extractor.MODULE.bazel")

## Keycloak
include("//seed/vendor/keycloak:keycloak.MODULE.bazel")

## VS Code
include("//seed/vendor/vscode:vscode.MODULE.bazel")
