[project]
name = "theseed"
version = "0.0.0"
description = "theseed monorepo"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "confluent-kafka>=2.10.1",
    "fastapi>=0.115.12",
    "fastmcp>=2.8.0",
    "grpcio>=1.73.0",
    "grpcio-tools>=1.73.0",
    "httpx>=0.28.1",
    "markupsafe==2.1.5",
    "mcp>=1.9.4",
    "openai>=1.86.0",
    "pillow>=11.0.0",
    "playwright>=1.52.0",
    "pyautogui>=0.9.54",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "requests>=2.28.1",
    "torch>=2.7.1",
    "uvicorn>=0.34.3",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
