[project]
name = "theseed"
version = "0.0.0"
description = "theseed monorepo"
readme = "README.md"
requires-python = "~=3.11.13"
dependencies = [
    "confluent-kafka>=2.10.1",
    "fastapi>=0.115.12",
    "fastmcp>=2.8.0",
    "google>=3.0.0",
    "google-api-python-client>=2.189.0",
    "google-auth-oauthlib>=1.2.4",
    "grpcio==1.67.1",
    "grpcio-tools==1.67.1",
    "httpx>=0.28.1",
    "intervaltree>=3.1.0",
    "markupsafe==2.1.5",
    "mcp>=1.9.4",
    "openai>=1.86.0",
    "pillow>=11.0.0",
    "playwright>=1.52.0",
    "pyautogui>=0.9.54",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.9.1",
    "pydub>=0.25.1",
    "pymilvus>=2.5.12",
    "pymongo>=4.13.2",
    "pynput>=1.8.1",
    "pysocks>=1.7.1",
    "pyyaml>=6.0.2",
    "requests>=2.28.1",
    "srt>=3.5.3",
    "torch>=2.7.1",
    "uvicorn>=0.34.3",
]
