# gazelle:exclude **/*_pb2_grpc.py
# gazelle:exclude **/*_pb2.py
# gazelle:exclude **/*_pb2.pyi
# gazelle:exclude **/*pb
# gazelle:exclude **/*pbconnect
# gazelle:exclude **/ent
# gazelle:exclude **/node_modules
# gazelle:prefix github.com/ndscm/theseed/seed/
# gazelle:proto file
# gazelle:python_default_visibility NONE
# gazelle:python_generation_mode file
# gazelle:resolve_regexp go github.com/([^/]+)/([^/]+)/(.*)/([^/]+)pbconnect //${3}:${4}_go_connect
# gazelle:resolve_regexp go github.com/([^/]+)/([^/]+)/(.*)/database/ent //${3}/database:ent
# gazelle:resolve_regexp go github.com/([^/]+)/([^/]+)/(.*)/database/ent/(.*) //${3}/database:ent/${4}
