load("@rules_python//python:py_library.bzl", "py_library")

package(default_visibility = [
    "//devprod/python:__subpackages__",
    "//seed/infra/llm/client/python:__subpackages__",
    "//seed/infra/mcp/client/python:__subpackages__",
    "//seed/infra/vlm/client/python:__subpackages__",

])

py_library(
    name = "seed_typing",
    srcs = ["seed_typing.py"],
)
