load("//seed/devprod/starlark/archive:defs.bzl", "create_tar_gz")

package(default_visibility = ["//seed/cloud/keycloak:__subpackages__"])

alias(
    name = "keycloak",
    actual = ":keycloak-release_tar_gz",
)

create_tar_gz(
    name = "keycloak-release_tar_gz",
    srcs = ["@keycloak_release//:files"],
    out = "keycloak-release.tar.gz",
    strip_components = 2,
)
