# gazelle:resolve go github.com/ndscm/theseed/seed/cloud/sqlsession/database/ent //seed/cloud/sqlsession/database:ent
# gazelle:resolve go github.com/ndscm/theseed/seed/cloud/sqlsession/database/ent/enttest //seed/cloud/sqlsession/database:ent/enttest
# gazelle:resolve go github.com/ndscm/theseed/seed/cloud/sqlsession/database/ent/hook //seed/cloud/sqlsession/database:ent/hook
# gazelle:resolve go github.com/ndscm/theseed/seed/cloud/sqlsession/database/ent/migrate //seed/cloud/sqlsession/database:ent/migrate
# gazelle:resolve go github.com/ndscm/theseed/seed/cloud/sqlsession/database/ent/predicate //seed/cloud/sqlsession/database:ent/predicate
# gazelle:resolve go github.com/ndscm/theseed/seed/cloud/sqlsession/database/ent/runtime //seed/cloud/sqlsession/database:ent/runtime
# gazelle:resolve go github.com/ndscm/theseed/seed/cloud/sqlsession/database/ent/session //seed/cloud/sqlsession/database:ent/session
