load("@rules_go//go:def.bzl", "go_library")

# gazelle:resolve go github.com/ndscm/theseed/seed/cloud/sqlsession/database/ent //seed/cloud/sqlsession/database:ent
# gazelle:resolve go github.com/ndscm/theseed/seed/cloud/sqlsession/database/ent/enttest //seed/cloud/sqlsession/database:ent/enttest
# gazelle:resolve go github.com/ndscm/theseed/seed/cloud/sqlsession/database/ent/hook //seed/cloud/sqlsession/database:ent/hook
# gazelle:resolve go github.com/ndscm/theseed/seed/cloud/sqlsession/database/ent/migrate //seed/cloud/sqlsession/database:ent/migrate
# gazelle:resolve go github.com/ndscm/theseed/seed/cloud/sqlsession/database/ent/predicate //seed/cloud/sqlsession/database:ent/predicate
# gazelle:resolve go github.com/ndscm/theseed/seed/cloud/sqlsession/database/ent/runtime //seed/cloud/sqlsession/database:ent/runtime
# gazelle:resolve go github.com/ndscm/theseed/seed/cloud/sqlsession/database/ent/session //seed/cloud/sqlsession/database:ent/session

go_library(
    name = "sqlsession",
    srcs = ["sqlsession.go"],
    importpath = "github.com/ndscm/theseed/seed/cloud/sqlsession",
    visibility = ["//visibility:public"],
    deps = [
        "//seed/cloud/sqlsession/database:ent",
        "//seed/cloud/sqlsession/database:ent/session",
        "//seed/cloud/sqlsession/database/sqlsessiondb",
        "//seed/infra/error/go/seederr",
        "//seed/infra/http/go/seedsession",
        "@com_github_google_uuid//:uuid",
    ],
)
