load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "sqlsession",
    srcs = ["sqlsession.go"],
    importpath = "github.com/ndscm/theseed/seed/cloud/sqlsession",
    visibility = ["//visibility:public"],
    deps = [
        "//seed/cloud/sqlsession/database:ent",
        "//seed/cloud/sqlsession/database:ent/session",
        "//seed/cloud/sqlsession/database/sqlsessiondb",
        "//seed/infra/error/go/seederr",
        "//seed/infra/http/go/seedsession",
        "@com_github_google_uuid//:uuid",
    ],
)
