load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "asyncx",
    srcs = ["asyncx.py"],
)

py_library(
    name = "clean",
    srcs = ["clean.py"],
    deps = [
        ":git",
        ":patch",
    ],
)

py_library(
    name = "diffpath",
    srcs = ["diffpath.py"],
    deps = [
        ":git",
        ":patch",
    ],
)

py_library(
    name = "export",
    srcs = ["export.py"],
    deps = [
        ":asyncx",
        ":git",
    ],
)

py_library(
    name = "git",
    srcs = ["git.py"],
    deps = [":asyncx"],
)

py_library(
    name = "metadata",
    srcs = ["metadata.py"],
    deps = [":git"],
)

py_library(
    name = "patch",
    srcs = ["patch.py"],
)

py_library(
    name = "prepare",
    srcs = ["prepare.py"],
    deps = [":git"],
)

py_library(
    name = "worktree",
    srcs = ["worktree.py"],
    deps = [
        ":asyncx",
        "//seed/infra/python:seed_flag",
    ],
)
