load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "asyncx",
    srcs = ["asyncx.py"],
)

py_library(
    name = "git",
    srcs = ["git.py"],
    deps = [":asyncx"],
)

py_library(
    name = "worktree",
    srcs = ["worktree.py"],
    deps = [
        ":asyncx",
        "//seed/infra/python:seed_flag",
    ],
)
