load("@rules_go//go:def.bzl", "go_library")

package(default_visibility = [
    "//seed/devprod/format/groovy:__subpackages__",
    "//seed/infra/groovy:__subpackages__",
])

go_library(
    name = "groovy",
    srcs = [
        "keyword.go",
        "lexer.go",
        "parser.go",
        "symbol.go",
        "token.go",
    ],
    importpath = "github.com/ndscm/theseed/seed/infra/groovy",
    deps = ["//seed/infra/groovy/ast"],
)
