load("@rules_python//python:py_library.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "seed_flag",
    srcs = ["seed_flag.py"],
    deps = [
        "@pypi//pydantic_settings",
    ],
)

py_library(
    name = "seed_init",
    srcs = ["seed_init.py"],
    deps = [
        ":seed_flag",
    ],
)

py_library(
    name = "seed_typing",
    srcs = ["seed_typing.py"],
)
