load("@rules_python//python:py_library.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "seed_flag",
    srcs = ["seed_flag.py"],
)

py_library(
    name = "seed_init",
    srcs = ["seed_init.py"],
    deps = [
        ":seed_flag",
        ":seed_log",
    ],
)

py_library(
    name = "seed_log",
    srcs = ["seed_log.py"],
    deps = [
        ":seed_flag",
    ],
)

py_library(
    name = "seed_typing",
    srcs = ["seed_typing.py"],
)
