load("@rules_python//python:py_library.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "seed_init",
    srcs = ["seed_init.py"],
    deps = [
        ":seed_log",
        "//seed/infra/flag/python:seed_flag",
    ],
)

py_library(
    name = "seed_log",
    srcs = ["seed_log.py"],
    deps = [
        "//seed/infra/flag/python:seed_flag",
    ],
)
