# gazelle:exclude **/ent
# gazelle:resolve go github.com/ndscm/theseed/seed/office/stuff/database/ent //seed/office/stuff/database:ent
# gazelle:resolve go github.com/ndscm/theseed/seed/office/stuff/database/ent/category //seed/office/stuff/database:ent/category
# gazelle:resolve go github.com/ndscm/theseed/seed/office/stuff/database/ent/enttest //seed/office/stuff/database:ent/enttest
# gazelle:resolve go github.com/ndscm/theseed/seed/office/stuff/database/ent/hook //seed/office/stuff/database:ent/hook
# gazelle:resolve go github.com/ndscm/theseed/seed/office/stuff/database/ent/migrate //seed/office/stuff/database:ent/migrate
# gazelle:resolve go github.com/ndscm/theseed/seed/office/stuff/database/ent/predicate //seed/office/stuff/database:ent/predicate
# gazelle:resolve go github.com/ndscm/theseed/seed/office/stuff/database/ent/runtime //seed/office/stuff/database:ent/runtime
# gazelle:resolve go github.com/ndscm/theseed/seed/office/stuff/database/ent/stuff //seed/office/stuff/database:ent/stuff
# gazelle:resolve go github.com/ndscm/theseed/seed/office/stuff/proto/stuffpbconnect //seed/office/stuff/proto:stuff_go_connect
