load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("//seed/devprod/go:proto.bzl", "go_connect_library")
load("//seed/devprod/ndscm/starlark:defs.bzl", "nd_bootstrap")

package(default_visibility = [
    "//seed/cloud/bidirequest:__subpackages__",
])

proto_library(
    name = "bidirequest_proto",
    srcs = ["bidirequest.proto"],
)

go_proto_library(
    name = "bidirequest_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "github.com/ndscm/theseed/seed/cloud/bidirequest/proto/bidirequestpb",
    proto = ":bidirequest_proto",
    visibility = ["//visibility:public"],
)

go_connect_library(
    name = "bidirequest_go_connect",
    importpath = "github.com/ndscm/theseed/seed/cloud/bidirequest/proto/bidirequestpbconnect",
    proto = ":bidirequest_proto",
    visibility = ["//visibility:public"],
    deps = [
        ":bidirequest_go_proto",
        "@com_connectrpc_connect//:connect",
    ],
)

nd_bootstrap(
    dsts = [
        {
            "dst": "bidirequestpb",
            "dir": True,
            "srcs": [{
                "src": ":bidirequest_go_proto",
                "output_group": "go_generated_srcs",
            }],
        },
        {
            "dst": "bidirequestpbconnect",
            "dir": True,
            "srcs": [{
                "src": ":bidirequest_go_connect_go",
            }],
        },
    ],
)
