load("//seed/devprod/go:ent.bzl", "go_ent_library")

package(default_visibility = [
    "//seed/cloud/sqlsession:__subpackages__",
])

go_ent_library(
    name = "ent",
    entities = ["session"],
    importpath = "github.com/ndscm/theseed/seed/cloud/sqlsession/database/ent",
    schema = "//seed/cloud/sqlsession/database/schema",
    deps = [
        "@com_github_google_uuid//:uuid",
    ],
)
