load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("//seed/devprod/ndscm/starlark:defs.bzl", "nd_bootstrap")

package(default_visibility = ["//visibility:private"])

genrule(
    name = "index_ts",
    outs = ["src/index.ts"],
    cmd = "./$(location src/index_ts.sh) > $@",
    stamp = 1,
    tools = ["src/index_ts.sh"],
)

ts_project(
    name = "ts_project",
    srcs = [":index_ts"],
    declaration = True,
    out_dir = "dist",
    root_dir = "src",
    source_map = True,
    transpiler = "tsc",
    tsconfig = "tsconfig.json",
)

js_library(
    name = "ts",
    srcs = [":package.json"],
    visibility = ["//visibility:public"],
    deps = [":ts_project"],
)

npm_package(
    name = "pkg",  # Required by aspect_rules_js
    srcs = [
        "package.json",
        ":ts_project",
    ],
    visibility = ["//visibility:public"],
)

nd_bootstrap(
    dsts = [
        {
            "dst": "dist",
            "dir": True,
            "srcs": [
                {
                    "src": ":ts_project",
                },
                {
                    "src": ":ts_project",
                    "output_group": "types",
                },
            ],
        },
    ],
)
