load("//seed/devprod/go:ent.bzl", "go_ent_library")
load("//seed/devprod/ndscm/starlark:defs.bzl", "nd_bootstrap")

package(default_visibility = [
    "//seed/devprod/golink:__subpackages__",
])

go_ent_library(
    name = "ent",
    entities = ["link"],
    importpath = "github.com/ndscm/theseed/seed/devprod/golink/database/ent",
    schema = "//seed/devprod/golink/database/schema",
)

nd_bootstrap(
    dsts = [
        {
            "dst": "ent",
            "dir": True,
            "srcs": [{
                "src": ":ent_full_srcs",
                "strip_common_prefix": True,
            }],
        },
    ],
)
